--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -1,5 +1,5 @@
 <div>
-  <!-- <button (click)="onAdd()">Add Company</button> -->
+  <button (click)="onAdd()">Add Company</button>
   <table>
     <thead>
       <tr>
